# codepulse

./: .gitignore  Cargo.toml  LICENSE  README.md  gojo.yaml
.github/workflows/: ci.yml  pages.yml
.gojo/: handoff.json  run.sh
.gojo/tasks/: deps-dotnet.md  deps-pr-babysit.md  deps-python.md  deps-rust.md  repo-brief.sh  self-heal.md
agents/dotnet/: CodePulse.Agent.slnx  README.md
agents/dotnet/CodePulse.Agent/: CodePulse.Agent.csproj  CodePulseAgent.cs
agents/dotnet/CodePulse.Agent.Tests/: CodePulse.Agent.Tests.csproj  UnitTest1.cs
agents/python/: README.md  pyproject.toml
agents/python/src/codepulse_agent/: __init__.py  __main__.py  agent.py
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: api.rs  main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: AGENT_PROTOCOL.md  ARCHITECTURE.md  DATA_MODEL.md  MCP_API.md  PRODUCT.md  REPO_BRIEF.md  ROADMAP.md
docs/guide/: ADVANCED.md  AGENTS.md  GETTING_STARTED.md
examples/dotnet-demo/: DotnetDemo.csproj  Program.cs  scenario.sh
examples/dotnet-demo/Properties/: launchSettings.json
examples/python-demo/: app.py  scenario.py
scripts/: e2e-dotnet.sh  e2e-python.sh
site/: copy.js  index.html  styles.css
site/docs/: advanced.html  agents.html  getting-started.html
skills/codepulse/: SKILL.md
