[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/ingest",
    "crates/store",
    "crates/controller",
    "crates/indexer",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/detroitpro/codepulse"

[workspace.dependencies]
codepulse-protocol = { path = "crates/protocol" }
codepulse-ingest = { path = "crates/ingest" }
codepulse-store = { path = "crates/store" }
codepulse-controller = { path = "crates/controller" }
codepulse-indexer = { path = "crates/indexer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-c-sharp = "0.23.1"
walkdir = "2"
regex = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
