[project]
name = "codepulse-agent-python"
version = "0.1.0"
description = "codepulse in-process agent for CPython"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "codepulse" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "fastapi>=0.115", "uvicorn>=0.32", "httpx>=0.27"]

[project.scripts]
codepulse-agent = "codepulse_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codepulse_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
