[package]
name = "codepulse-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adaptive probe controller — budgeted, time-boxed instrumentation"

[dependencies]
codepulse-protocol = { workspace = true }
codepulse-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
