[package]
name = "codepulse-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ingest path for aggregated agent batches"

[dependencies]
codepulse-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
