[package]
name = "codepulse-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language-agnostic wire types for codepulse agents and core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
