[package]
name = "codepulse-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local intelligence store (SQLite) for static + runtime data"

[dependencies]
codepulse-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
